SDKs/twilio.com/twilio_trunking_v1/1.37.4/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateCredentialListRequest, CreateCredentialListResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateCredentialListRequest = {
  security: {
    accountSidAuthToken: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  },
  pathParams: {
    trunkSid: "sit",
  },
  request: {
    credentialListSid: "voluptas",
  },
};

sdk.createCredentialList(req).then((res: CreateCredentialListResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createCredentialList`
* `createIpAccessControlList` - Associate an IP Access Control List with a Trunk
* `createOriginationUrl`
* `createPhoneNumber`
* `createTrunk`
* `deleteCredentialList`
* `deleteIpAccessControlList` - Remove an associated IP Access Control List from a Trunk
* `deleteOriginationUrl`
* `deletePhoneNumber`
* `deleteTrunk`
* `fetchCredentialList`
* `fetchIpAccessControlList`
* `fetchOriginationUrl`
* `fetchPhoneNumber`
* `fetchRecording`
* `fetchTrunk`
* `listCredentialList`
* `listIpAccessControlList` - List all IP Access Control Lists for a Trunk
* `listOriginationUrl`
* `listPhoneNumber`
* `listTrunk`
* `updateOriginationUrl`
* `updateRecording`
* `updateTrunk`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
